# gtaz

./: .gitignore  AUTO_PICKUP.md  AUTO_PICKUP.txt  DEV.md  NOTES.md  README.md  build.bat  entry_blocks.py  entry_pickup.py  entry_switch.py  gtaz.spec  pyproject.toml  upload.py
src/gtaz/: controls.py  gamepads.py  keyboard_actions.py  recognizes.py  recognizes_v2.py  resources.py  screens.py  segments.py  windows.py
src/gtaz/agency_move/: inference.py  train.py
src/gtaz/audios/: cables.py  detects.py  detects_v2.py  detects_v3.py  signals.py  signals_v2.py  signals_v3.py  sounds.py  template_feature.pkl  volumes.py
src/gtaz/characters/: interacts.py
src/gtaz/devices/: gamepads.py  keyboards.py
src/gtaz/menus/: commons.py  interacts.py  locates.py  navigates.py  ocrs.py
src/gtaz/models/: agency_move.py
src/gtaz/models/agency_move/: README.md  inference.py  realtime.py  recognizes.py  recognizes_v2.py  train.py
src/gtaz/nets/: blocks.py  tracks.py
src/gtaz/visions/: screens.py  segments.py  windows.py
src/gtaz/workers/: auto_pickup.py  mode_switch.py
