[project]
name = "gtaz"
version = "0.9.2"
authors = [
    { name="Hansimov" },
]
description = "Visual-based AI for real-time tasks in GTAV"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [ ]

[project.optional-dependencies]
dev = [ "tclogger", "vgamepad", "numpy", "Pillow", "torch", "torchvision", "timm" ]
gpu = [ ]
cpu = [ ]

[project.scripts]
screen = "gtaz.visions.screens:main"
blocks = "gtaz.nets.blocks:main"
switch = "gtaz.workers.mode_switch:main"
pickup = "gtaz.workers.auto_pickup:main"

[project.urls]
Homepage = "https://github.com/Hansimov/gtaz"
Issues = "https://github.com/Hansimov/gtaz/issues"